Work till Search user complete

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,12 +12,14 @@ body {
 
 ::-webkit-scrollbar {
   /* cursor: pointer; */
+
   width: 8px;
 }
 
 ::-webkit-scrollbar-track {
   /* cursor: pointer; */
   background: #555;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
