--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,31 +33,50 @@ body {
 
 /* SHAKE ANIMATION ON HORIZONTAL DIRECTION */
 .shake {
-	animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) 0.2s both;
-	transform: translate3d(0, 0, 0);
-	backface-visibility: hidden;
-	perspective: 1000px;
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) 0.2s both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
 }
 
 @keyframes shake {
-	10%,
-	90% {
-		transform: translate3d(-1px, 0, 0);
-	}
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
 
-	20%,
-	80% {
-		transform: translate3d(2px, 0, 0);
-	}
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
 
-	30%,
-	50%,
-	70% {
-		transform: translate3d(-4px, 0, 0);
-	}
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
 
-	40%,
-	60% {
-		transform: translate3d(4px, 0, 0);
-	}
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+@font-face {
+  font-family: Alegreya;
+  src: url(./fonts/Alegreya-BoldItalic.ttf);
+}
+
+.alegreya {
+  font-family: Alegreya;
+}
+
+@media only screen and (min-width: 0px) {
+  .bk {
+    height: 650px;
+  }
+}
+
+textarea::-webkit-scrollbar {
+  display: none;
 }
